2002-10-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* ly/params-init.ly: Just define style-alist, no need to
	define-public.

	* input/mutopia/W.A.Mozart/mozart-hrn3-defs.ly: Fix style override
	(thanks Han-Wen).

	* mf/GNUmakefile (FONT_FILES): Add feta-nummer.
	(FET_FILES): = FONT_FILES.

	* Merge from stable:

	    cvs update -jlilypond_1_6_5 -jlilypond_1_6_6

2002-10-21  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/generate-documentation.scm (string-append): add macro
	definitions.

	* lily/text-item.cc (lookup_text): don't use virtual fonts for
	normal texts.

	* lily/multi-measure-rest-engraver.cc: make separate
	MultiMeasureRestNumber grob. Introduce restNumberThreshold.

	* lily/multi-measure-rest.cc: remove text handling. Remove
	number-threshold.

2002-10-20  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/music-types.scm: doc patch by Graham Percival

2002-10-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/make-font-dir.py (sketch_p): Bugfix: only write
	encoding part.
	(Font_info.set_defaults): pixelsize now also defauts to '0'.
	(sketch_p): Sketch wants only first four elements of X11 font spec.

	* buildscripts/mf-to-table.py (parse_logfile): Bugfix. 

	* mf/feta-autometric.mf: Write foundry and family to log.

	* mf/GNUmakefile: Fixes for pfx builds.  Also write sketch
	font translation table.

	* buildscripts/mf-to-table.py: Better font info into afm.

	* buildscripts/make-font-dir.py: Use font info from afm.  Mftrace
	1.0.9 required.

	* configure.in: Whine for mftrace 1.0.9.

2002-10-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/parser.yy (chord_body): allow <<c e>>4 notation.

	* lily/main.cc (main_prog): don't try to load init.EXT when
	processing foo.EXT.

2002-10-15  Rune Zedeler  <rune@zedeler.dk>

	* scm/tex.scm (zigzig-line): added.

	* scm/ps.scm (zigzag-line): added.

	* ps/music-drawing-routines.ps (subvec): added.
	(draw_zigzag_line): added.
	
	* lily/line-spanner.cc: Add support for #'type = #'zigzag. reading